# thoth

./: .editorconfig-checker.json  .gitignore  .gitleaks.toml  .gitleaksignore  .yamllint  AGENTS.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  MILESTONES.md  Makefile  OPENAI-BUGS.md  PROJECTS.md  PUBLISH.md  README.md  RELEASE-PLEASE-APP.md  RELEASE.md  cliff.toml  commitlint.config.js  commitlint.config.mjs  doxa  doxa_test  doxa_vcr.md  justfile  lefthook.yml  manual_testing_instructions.md  package-lock.json  package.json  pyproject.toml  references.md  release-please-config.json  requirements.txt  thoth  thoth.plan.v0.md  thoth.plan.v5.md  thoth.v16.md  thoth_test  thoth_vcr.md
.devcontainer/: devcontainer.json
.devsy/: setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  devsy.yml  extended.yml  live-api.yml  publish.yml  release-please.yml
archive/: 2026-05-01-p28-gemini-background-deep-research.md  doxa-research.audit.temp.md  doxa-research.audit.v3.temp.md  doxa-research.audit.v4.temp.md  doxa-research.backup.v23  doxa-research.chatgpt.v5.md  doxa-research.claude.v5.md  doxa-research.missing.features.temp.md  doxa-research.plan.v0.md  doxa-research.plan.v1.md  doxa-research.plan.v2.md  doxa-research.plan.v3.md  doxa-research.plan.v4.md  doxa-research.prd.v22.md  doxa-research.prd.v23.md  doxa-research.v10.md  doxa-research.v11.md  doxa-research.v12.md  doxa-research.v13.md  doxa-research.v14.md  doxa-research.v15.md  doxa-research.v16.md  doxa-research.v17.md  doxa-research.v18.md  doxa-research.v19.md  doxa-research.v20.md  doxa-research.v21.md  doxa-research.v6.md  doxa-research.v7.md  doxa-research.v8.md  doxa-research.v9.md  temp.v0.md  temp.v1.md  temp.v2.md  temp.v3.md  temp.v4.md  thoth.audit.temp.md  thoth.audit.v3.temp.md  thoth.audit.v4.temp.md  thoth.backup.v23  (+23 more)
docs/: COMMANDS.md  HERO-RECORDING.md  json-output.md  providers.md
planning/: M05_manual_testing.md  config_arch.md  config_subcommand.plan.v1.md  config_subcommand.v1.md  doxa-research.plan.v10.md  doxa-research.plan.v5.md  doxa-research.plan.v6.md  doxa-research.plan.v7.md  doxa-research.plan.v9.md  doxa-research.prd.v24.md  fix-skipped-tests.v1.md  inconsistencies.v1.md  inference_provider_parameter_config_inconsistencies.md  inference_provider_parameter_config_inconsistencies_implementation_plan.md  inference_provider_parameter_config_matrix.md  p18-call-site-audit.md  p18-cancel-research.md  p24-immediate-providers-consolidation.v1.md  p24-openai-stream-audit.v1.md  p24-providers-root-namespace-investigation.v1.md  p25-arch-review-analysis-and-questions.v1.html  p25-arch-review-analysis-and-questions.v1.md  p27-followup-factor-dedup-spec.md  pexpect.md  pr56_review_comment_triage_report.html  project_promote_commands.md  prompt_toolkit.md  references.md  shift_return.md  temp.v5.md  thoth.plan.v5.md  thoth.plan.v6.md  thoth.plan.v7.md  thoth.plan.v9.md  thoth.prd.v22.md  thoth.prd.v23.md  thoth.prd.v24.md
projects/: P01-developer-tooling.md  P02-bug-01-openai-background-status.md  P03-bug-03-openai-poll-interval.md  P04-gap-01-max-tool-calls.md  P05-vcr-cassette-replay-tests.md  P06-hybrid-error-handling-resumable.md  P08-typed-exceptions-api-key-resolution.md  P09-decompose-main-appcontext-di.md  P10-config-subcommand-xdg.md  P11-doxa-modes-discovery.md  P11-thoth-modes-discovery.md  P12-cli-mode-editing.md  P13-p11-followup-is-background-model.md  P14-doxa-cli-ergonomics-v1.md  P14-thoth-cli-ergonomics-v1.md  P15-p14-bug-fixes.md  P16-PR1-click-native-cli-refactor.md  P16-PR2-remove-legacy-shims.md  P16-PR3-automation-polish.md  P17-ergonomics-spec-round-trip.md  P18-immediate-vs-background-kind.md  P18-resume-async.md  P20-live-api-workflow.md  P21-configuration-profile-resolution.md  P21b-configuration-profile-crud.md  P21c-config-filename-standardization.md  P22-openai-immediate-sync.md  P23-perplexity-immediate-sync.md  P24-gemini-immediate-sync.md  P25-arch-review-immediate-providers.md  P26-openai-background-deep-research.md  P27-perplexity-background-deep-research.md  P28-gemini-background-deep-research.md  P29-arch-review-background-deep-research.md  P30-claude-code-skills-support.md  P31-interactive-init-command.md  P32-interactive-prompt-refiner.md  P33-schema-driven-config-defaults.md  P34-offline-testing-openai-stream-.md  P34-vcr-cassette-openai-stream-.md  (+6 more)
research/: _dr_spike_cancel.txt  _dr_spike_cancel_probe.txt  _dr_spike_errors.txt  _dr_spike_models.txt  _dr_spike_poll.json  _dr_spike_poll.txt  _dr_spike_requires_action.json  _dr_spike_requires_action.txt  _dr_spike_submit.json  _dr_spike_submit.txt  configuration_profile_pattern.v1.md  gemini-deep-research-api.v1.md  gemini-dr-api-spike-2026-05-11.md  openai-deep-research-api.v1.md  perplexity-deep-research-api.v1.md
scripts/: check-gitleaks.sh  install-gitleaks.sh  release.sh
src/thoth/: cli.py  (+30 more)
tests/: CLAUDE.md  _fixture_helpers.py  conftest.py  conftest_p16.py  test_api_key_error_message.py  test_api_key_resolver.py  test_app_context.py  test_async_checkpoint.py  test_build_tooling.py  test_builtin_modes_have_kind.py  test_cancel_subcommand.py  test_ci_lint_rules.py  test_cli_help.py  test_cli_option_policy.py  test_cli_regressions.py  test_completion.py  test_completion_install.py  test_completion_sources.py  test_config.py  test_config_cmd.py  test_config_document.py  test_config_document_modes.py  test_config_document_modes_default.py  test_config_filename.py  test_config_profile_cli_integration.py  test_config_profiles.py  test_config_profiles_cmd.py  test_config_profiles_permutations.py  test_config_prompt_prefix.py  test_config_schema.py  test_config_starter_round_trip.py  test_config_validate.py  test_default_mode_resolution.py  test_docs_command_reference.py  test_doxa_test_cli.py  test_doxa_test_parallel_hazards.py  test_error_context.py  test_flag_context_preflight.py  test_get_config_data.py  test_get_init_data.py  (+82 more)
(+166 files in other folders)
