[project]
name = "thoth"
version = "2.5.0"
description = "AI-Powered Research Assistant — orchestrates parallel LLM providers for comprehensive research reports"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Steve Morin", email = "steve.morin@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "ai", "research", "llm", "openai", "perplexity", "gemini",
    "cli", "deep-research", "assistant", "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.3.3",
    "openai>=2.32.0",
    "httpx>=0.27.0",
    "rich>=13.7",
    "aiofiles>=25.1.0",
    "tenacity>=8.0",
    "python-dateutil>=2.8",
    "prompt-toolkit>=3.0",
    "tomlkit>=0.13",
    "thothspinner>=1.2.6",
]

[project.scripts]
thoth = "thoth.__main__:main"

[project.urls]
Homepage = "https://github.com/smorin/thoth"
Repository = "https://github.com/smorin/thoth"
Changelog = "https://github.com/smorin/thoth/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/smorin/thoth/issues"

[build-system]
requires = ["uv_build>=0.6,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.32",
    "pexpect>=4.8",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# P18 Phase I: `extended` marker tests hit the real provider APIs (cost +
# wall-clock). They are gated out of the default suite via `addopts`. Run
# explicitly with `uv run pytest -m extended` or `just test-extended`.
markers = [
    "extended: real-API contract tests; gated, not run by default",
]
addopts = "-m 'not extended'"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "archive",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise-without-from-inside-except (existing pattern throughout codebase)
    "B007",  # unused loop variable (existing pattern: provider_name, _ in .items())
    "W293",  # whitespace on blank line inside f-string literals
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Single source of truth for codespell skip + ignore lists. Both
# lefthook (pre-commit + pre-push) and the CI Hygiene job pick this up
# automatically by invoking `uvx codespell` with no flag overrides.
[tool.codespell]
skip = ".git,.venv,htmlcov,uv.lock,bun.lock,requirements.txt,archive,planning,research,node_modules"
ignore-words-list = "thoth,perplexity,sonar,pplx,openai,hel"

